<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="#000000" />

    <Button
        android:id="@+id/subscribe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="subscribe"
        android:text="@string/subscription" />

    <ImageButton
        android:id="@+id/up"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/arrow_right"
        android:onClick="up"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/arrow_left"
            android:onClick="left"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />

        <ImageButton
            android:id="@+id/right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/arrow_right"
            android:onClick="right"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/down"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/arrow_down"
        android:onClick="down"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/rotate_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rotate_left"
            android:onClick="rotate_left"
            app:srcCompat="@drawable/ic_baseline_rotate_left_24" />

        <ImageButton
            android:id="@+id/rotate_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rotate_left"
            android:onClick="rotate_right"
            app:srcCompat="@drawable/ic_baseline_rotate_right_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scrollbars="vertical" />
</LinearLayout>